--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <!-- main content - Tutaj wrzucane są widoki About Us, Blog, Blog Details Resources, Search, Error--> 
 
 
-            <section class="articleDetails" id="articleDetails">
+            <section class="articleDetails obs" id="articleDetails">
                 <article class="article">
                     
                     <div class="article__header">
@@ -183,7 +183,7 @@
                 </article>
             </section>
             
-            <section class="search-result">
+            <section class="search-result obs">
 
             </section>
 <!-- 
@@ -192,15 +192,15 @@
             </section> -->
 
         </main>
-        <section class="footer" id="footer">
+        <footer class="footer obs" id="footer">
             <form class="footer__form">
                 <h2 class="section-title footer__form--title">Contact</h2>
                 <input type="email"  id="email" class="input__email footer-email" placeholder="Enter Your email adress.."required>
                  <textarea class="input__textarea footer-textarea" wrap="soft" minlength="3" maxlength="256" placeholder="Your message.." required></textarea>
                 <button type="submit" class="btn--big btn btn--big__footer">Send</button>
             </form>
-            <footer class="footer__copyright">&copy; Copyright 2021, NatLuk</footer>
-        </section>
+            <p class="footer__copyright">&copy; Copyright 2021, NatLuk</p>
+        </footer>
     </div>
     <script src="./scripts/index.js"></script>
 </body>
